--- a/FrontEnd/pages/adminPages/CustomerManagement.html
+++ b/FrontEnd/pages/adminPages/CustomerManagement.html
@@ -128,6 +128,10 @@
           <label for="dob">DOB</label>
           <input type="date" class="form-control" id="dob">
         </div>
+        <div class="form-group col-md-6">
+          <label for="purchaseDate">Purchase Date</label>
+          <input type="date" class="form-control" id="purchaseDate">
+        </div>
       </div>
       <div class="form-row">
         <div class="form-group">
@@ -164,6 +168,7 @@
               <th scope="col">Total Point </th>
               <th scope="col">DOB</th>
               <th scope="col">Address</th>
+              <th scope="col">Purchase Date</th>
 
             </tr>
             </thead>
@@ -177,7 +182,7 @@
 
 <footer id="footer" class="footer">
   <div class="copyright">
-    &copy; Copyright <strong><span>Shoe Managemnt Syatem</span></strong>. All Rights Reserved
+    &copy; Copyright <strong><span>Shoe Management System</span></strong>. All Rights Reserved
   </div>
   <div class="credits">
     Designed by <a href="">Sethmini Dissanayake</a>
